--- a/adguardhome/docker-compose.yml
+++ b/adguardhome/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     ports:
       - '53:53/tcp'
       - '53:53/udp'
-      - '3000:3000'
+      # - '3000:3000' # used only initial setup
+      # - '80:80' # used until reverse proxy is installed
     networks:
       - network
 
