--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -3,3 +3,8 @@ services:
     image: containrrr/watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - network
+
+networks:
+  network:
