--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -13,7 +13,9 @@ services:
       # - '81:81' # Admin Web Port (access with proxy)
     networks:
       - network
-      - adguardhome_network # for Adguard Home rev. proxy
+      # other networks for reverse proxy
+      - adguardhome_network
+      - portainer_network
     healthcheck:
       test: ["CMD", "/usr/bin/check-health"]
       interval: 10s
@@ -26,4 +28,6 @@ volumes:
 networks:
   network:
   adguardhome_network:
+    external: true
+  portainer_network:
     external: true
