--- a/uptimekuma/docker-compose.yml
+++ b/uptimekuma/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     restart: always
     volumes:
       - data:/app/data
+      - /var/run/docker.sock:/var/run/docker.sock
     # ports:
       # - 3001:3001
     networks:
